--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,33 @@ p {
   color: red;
 }
 
-#main_viz{
+#main_grid_container{
    display: grid;
-   background-color: white;
-   grid-template-columns: 2fr 6fr;
+   background-color: transparent;
+   grid-template-columns: 1fr 6fr;
    border: 3px solid black;
-   margin: 3%;
-   padding: 5%;
+   margin: 1%;
+   padding: 0.5%;
+   height: 700px
+
+}
+
+.main_grid_item {
+   display: grid;
+   background-color: transparent;
+   border: 3px solid blue;
+   margin: 1%;
+   padding: 1%;
+
+}
+
+.main_grid_item_map {
+   display: grid;
+   background-color: transparent;
+   width: 250px;
+   height: 800;
+   border: 3px solid blue;
+   margin: 1%;
+   padding: 1%;
 
 }
