--- a/css/main.css
+++ b/css/main.css
@@ -11,15 +11,32 @@ p {
 #main_grid_container{
    display: grid;
    background-color: transparent;
-   grid-template-columns: 25% 75%;
+   grid-template-columns: 15% 85%;
    border: 3px solid black;
    margin: 1%;
    padding: 0.5%;
    height: 700px;
 }
 
-#map_section {
+.div_three_rows {
    display: grid;
+   grid-template-rows: repeat(3, 1fr);
+   border: 6px solid yellow;
+}
+
+.div_three_columns {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   border: 6px solid yellow;
+}
+
+.div_two_columns {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   border: 6px solid yellow;
+}
+
+#map_section {
    background-color: transparent;
    border: 3px solid yellow;
    margin: 1%;
@@ -27,14 +44,12 @@ p {
 }
 
 #data_section {
-   display: grid;
    background-color: transparent;
    border: 3px solid blue;
    margin: 1%;
    padding: 1%;
 }
 
-.map {
-   height: 600px;
-   width:100px
+#map {
+   height:670px
 }
