--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ p {
 }
 
 #quintile_pyramid .text_quintile {
-  fill: transparent;
+  fill: black;
   font-family: sans-serif;
   font-size: 14px;
 }
