--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,23 @@
 body {
-  background-color: lightgray;
+  background-color: rgb(246, 246, 246);
+  font-family: "Calibri", "Segoe UI", sans-serif;
 }
+
 h1 {
-  color: blue;
+  color: rgb(24, 24, 24);
 }
+
 p {
-  color: red;
+  color: rgb(65, 65, 65);
 }
 
 #main_grid_container{
    display: grid;
    background-color: transparent;
-   grid-template-columns: 15% 85%;
-   border: 3px solid black;
-   margin: 1%;
-   padding: 0.5%;
-   height: 700px;
+   border: 10px solid rgb(16, 179, 60);
+   margin: 2rem;
+   height: 45rem;
+   padding: 1rem;
 }
 
 .div_three_rows {
@@ -24,23 +26,53 @@ p {
    border: 6px solid yellow;
 }
 
+.div_two_rows {
+   display: grid;
+   border: 1px solid yellow;
+}
+
+
 .div_three_columns {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
-   border: 6px solid yellow;
 }
 
 .div_two_columns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   border: 6px solid yellow;
+   border: 1px solid gray;
+}
+
+.filter_title {
+   text-align: center;
+}
+
+.filter_square{
+   border-radius: 1rem;
 }
 
 #map_section {
    background-color: transparent;
    border: 3px solid red;
-   margin: 1%;
-   padding: 1%;
+   width: 10rem;
+}
+
+#map {
+   height:670px
+}
+
+#data_profile {
+   color: black;
+   display: grid;
+   grid-template-rows: repeat(2, 1fr);
+}
+
+.non_display {
+   display: none;
+}
+
+.display_element {
+   display: block;
 }
 
 #data_section {
@@ -48,10 +80,10 @@ p {
    border: 3px solid blue;
    margin: 1%;
    padding: 1%;
-}
-
-#map {
-   height:670px
+   width: 80rem;
+   height: 40rem;
+   display: grid;
+   grid-template-rows: 5% 95%;
 }
 
 .unselected_region {
@@ -69,23 +101,41 @@ p {
 
 #year_selection {
    display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(4, 1fr);
+   grid-template-columns: repeat(7, 1fr);
+   grid-template-rows: repeat(3, 1fr);
    border: solid black;
-   margin: 10px;
+   margin: 1px;
    place-items: center;
 }
 
-.unselected_year {
-   margin: 1px;
+.button_year {
    border: solid black;
+   border-radius: 5px;
+   font-size: 0.8rem;
+   padding: 0.8rem;
+   padding-top: 0.5rem;
+   padding-bottom: 0.5rem;
+}
+
+.unselected_year {
+   background-color: transparent;
 }
 
 .selected_year {
-   margin: 1px;
-   border: solid black;
-   background-color: lightcoral
+   background-color: rgb(250, 121, 121);
+   color: white;
+   font-weight: bold;
 }
+
+#quintile_selection {
+   display: grid;
+   /* grid-template-columns: repeat(5, 1fr);
+   grid-template-rows: repeat(4, 1fr);*/
+   border: solid black;
+   margin: 1px;
+   place-items: center;
+}
+
 
 #quintile_pyramid polygon.unselected_quintile {
   fill: #f3f3f3;
@@ -94,14 +144,24 @@ p {
 }
 
 #quintile_pyramid polygon.selected_quintile {
-  fill: #4a90e2;        /* active color */
+  fill: #6cb1ff;        /* active color */
   stroke: #2b6fb2;
 }
 
 #quintile_pyramid .text_quintile {
   fill: black;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+#gender_selection {
+   display: grid;
+   /* grid-template-columns: repeat(5, 1fr);
+   grid-template-rows: repeat(4, 1fr);*/
+   border: solid black;
+   margin: 1px;
+   place-items: center;
 }
 
 #gender_buttons {
@@ -110,25 +170,25 @@ p {
 }
 
 .female_button_unselected {
-   fill: rgb(248, 200, 187);
+   fill: transparent;
    stroke: #000;
-   stroke-width: 2px
+   stroke-width: 0.5px
 }
 
 .male_button_unselected {
-   fill: rgb(183, 221, 226);
+   fill: transparent;
    stroke:#000;
-   stroke-width: 2px
+   stroke-width: 0.5px
 }
 
 .female_button_selected {
    fill: #ed7c5cff;
    stroke: #000;
-   stroke-width: 2px
+   stroke-width: 1.5px
 }
 
 .male_button_selected {
    fill: #4b9ea8ff;
    stroke:#000;
-   stroke-width: 2px
+   stroke-width: 1.5px
 }
