--- a/css/main.css
+++ b/css/main.css
@@ -14,76 +14,47 @@ p {
 #main_grid_container{
    display: grid;
    background-color: transparent;
-   border: 10px solid rgb(16, 179, 60);
+   border: 10px solid gray;
    margin: 2rem;
    height: 45rem;
-   padding: 1rem;
+   grid-template-columns: 10% 80% 10%;
 }
 
 .div_three_rows {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
-   border: 6px solid yellow;
 }
 
 .div_two_rows {
    display: grid;
-   border: 1px solid yellow;
 }
 
 
 .div_three_columns {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
+   border-bottom: 1px solid gray;
 }
 
 .div_two_columns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   border: 1px solid gray;
+   border-bottom: 1px solid gray;
 }
 
-.filter_title {
-   text-align: center;
-}
-
-.filter_square{
-   border-radius: 1rem;
+#region_selection {
+   display: grid;
+   grid-template-rows: 5% 95%;
+   place-items: center;
+   border-right: 1px solid black;
 }
 
 #map_section {
    background-color: transparent;
-   border: 3px solid red;
-   width: 10rem;
 }
 
 #map {
    height:670px
-}
-
-#data_profile {
-   color: black;
-   display: grid;
-   grid-template-rows: repeat(2, 1fr);
-}
-
-.non_display {
-   display: none;
-}
-
-.display_element {
-   display: block;
-}
-
-#data_section {
-   background-color: transparent;
-   border: 3px solid blue;
-   margin: 1%;
-   padding: 1%;
-   width: 80rem;
-   height: 40rem;
-   display: grid;
-   grid-template-rows: 5% 95%;
 }
 
 .unselected_region {
@@ -99,11 +70,63 @@ p {
    stroke: black
 }
 
+#data_section {
+   background-color: transparent;
+   border-left: 1px solid black;
+   display: grid;
+   grid-template-rows: 5% 95%;
+}
+
+#nav_bar {
+   place-items: center;
+}
+
+.nav_option {
+   text-align: center;
+   font-size: 1rem ;
+}
+
+#data_profile {
+   display: grid;
+   grid-template-rows: repeat(2, 1fr);
+}
+
+.non_display {
+   display: none;
+}
+
+.display_element {
+   display: block;
+}
+
+#filters {
+   display: grid;
+   grid-template-rows: 42.5% 42.5% 15%;
+   border-left: 1px solid black;
+}
+
+.filter_title {
+   text-align: center;
+   font-size: 0.8rem ;
+   font-weight: bold;
+}
+
+.filter_square{
+   border-radius: 0rem;
+}
+
 #year_selection {
    display: grid;
-   grid-template-columns: repeat(7, 1fr);
-   grid-template-rows: repeat(3, 1fr);
-   border: solid black;
+   place-items: center;
+   display: grid;
+   grid-template-rows: 15% 85%;
+   border-bottom: 1px solid black;
+}
+
+#years_options {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-template-rows: repeat(10, 1fr);
    margin: 1px;
    place-items: center;
 }
@@ -111,10 +134,16 @@ p {
 .button_year {
    border: solid black;
    border-radius: 5px;
-   font-size: 0.8rem;
-   padding: 0.8rem;
-   padding-top: 0.5rem;
-   padding-bottom: 0.5rem;
+   font-size: 0.7rem;
+   padding: 0.5rem;
+   padding-top: 0.2rem;
+   padding-bottom: 0.2rem;
+   text-align: center;
+   margin: 0.1rem;
+   margin-left: 0.3rem;
+   margin-right: 0.3rem;
+
+
 }
 
 .unselected_year {
@@ -129,10 +158,8 @@ p {
 
 #quintile_selection {
    display: grid;
-   /* grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(4, 1fr);*/
-   border: solid black;
-   margin: 1px;
+   grid-template-rows: 15% 85%;
+   border-bottom: 1px solid black;
    place-items: center;
 }
 
@@ -157,16 +184,16 @@ p {
 
 #gender_selection {
    display: grid;
-   /* grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(4, 1fr);*/
-   border: solid black;
-   margin: 1px;
+   border: 0px solid black;
    place-items: center;
+   display: grid;
+   grid-template-rows: 15% 85%;
 }
 
 #gender_buttons {
-   width:300px;
-   height:200px;
+   color: black;
+   height: 100%;
+   width: 100%;
 }
 
 .female_button_unselected {
