--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ p {
 .div_two_columns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   border-bottom: 1px solid gray;
+   border-bottom: 1px solid yellow;
 }
 
 #region_selection {
@@ -54,7 +54,18 @@ p {
 }
 
 #map {
-   height:670px
+   width: 100%;
+   height:100%
+}
+
+.tooltip {
+   position: absolute;
+   background-color: white;
+   padding: 5px 10px;
+   border: 1px solid black;
+   border-radius: 4px;
+   pointer-events: none;
+   opacity: 0;
 }
 
 .unselected_region {
@@ -87,8 +98,7 @@ p {
 }
 
 #data_profile {
-   display: grid;
-   grid-template-rows: repeat(2, 1fr);
+   place-items: center;
 }
 
 .non_display {
@@ -112,7 +122,7 @@ p {
    fill: #bbcbb4;
    stroke: black
 }
-.holapepe {
+.number_circle {
     fill: black;      /* Text color */
     font-size: 20000;  /* Adjust relative to your viewBox */
     text-anchor: middle; /* Center horizontally */
