done with dollar sign

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ p {
    text-align: center;
 }
 
+.summary_total_borrowed {
+   font-weight: bold;
+}
+
 #circle_money {
    height: 10rem;
    width: 10rem;
