--- a/css/main.css
+++ b/css/main.css
@@ -206,13 +206,13 @@ p {
 }
 
 
-#quintile_pyramid polygon.unselected_quintile {
+#quintile_pyramid .unselected_quintile {
   fill: #f3f3f3;
   stroke: #666;
   stroke-width: 1;
 }
 
-#quintile_pyramid polygon.selected_quintile {
+#quintile_pyramid rect.selected_quintile {
   fill: #6cb1ff;        /* active color */
   stroke: #2b6fb2;
 }
@@ -222,6 +222,7 @@ p {
   font-family: sans-serif;
   font-size: 1rem;
   font-weight: bold;
+  font-size: 1.5rem;
 }
 
 #gender_selection {
