--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Calibri", "Segoe UI", sans-serif;
-  background-color: white;
+  background-color: #FFFDFD;
   place-items: center;
   text-align: center;
   align-items: center;
@@ -46,6 +46,7 @@ a {
    border: 10px solid gray;
    margin: 2rem;
    height: 45rem;
+   width: 95%;
    grid-template-columns: 10% 80% 10%;
 }
 
@@ -122,6 +123,9 @@ a {
 .nav_option {
    text-align: center;
    font-size: 1rem ;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-weight: bold;
+   color: #01968e;
 }
 
 #data_profile {
