--- a/css/main.css
+++ b/css/main.css
@@ -92,13 +92,14 @@ a {
 #main_grid_container{
    display: grid;
    background-color: white;
-   border: 10px solid gray;
+   border: 5px solid gray;
    margin: 2rem;
    margin-top: 1rem;
    height: 45rem;
    width: 95%;
    grid-template-columns: 10% 80% 10%;
    font-family: 'Poppins', sans-serif;
+   border-radius: 10px;
 }
 
 .div_three_rows {
@@ -125,7 +126,7 @@ a {
    display: grid;
    grid-template-rows: 5% 95%;
    place-items: center;
-   border-right: 1px solid black;
+   border-right: 1px solid gray;
 }
 
 #map_section {
@@ -162,7 +163,6 @@ a {
 
 #data_section {
    background-color: transparent;
-   border-left: 1px solid black;
    display: grid;
    grid-template-rows: 5% 95%;
 }
@@ -248,7 +248,7 @@ a {
 #filters {
    display: grid;
    grid-template-rows: 50% 35% 15%;
-   border-left: 1px solid black;
+   border-left: 1px solid gray;
 }
 
 .filter_title {
@@ -274,7 +274,7 @@ a {
    place-items: center;
    display: grid;
    grid-template-rows: 15% 85%;
-   border-bottom: 1px solid black;
+   border-bottom: 1px solid gray;
 }
 
 #years_options {
@@ -286,7 +286,7 @@ a {
 }
 
 .button_year {
-   border: solid black;
+   border: solid gray;
    border-radius: 5px;
    font-size: 0.7rem;
    padding: 0.5rem;
@@ -313,7 +313,7 @@ a {
 #quintile_selection {
    display: grid;
    grid-template-rows: 15% 85%;
-   border-bottom: 1px solid black;
+   border-bottom: 1px solid gray;
    place-items: center;
 }
 
@@ -342,6 +342,7 @@ a {
    place-items: center;
    display: grid;
    grid-template-rows: 15% 85%;
+   margin-top: 10px;
 }
 
 #gender_buttons {
