--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ a {
    border: 5px solid gray;
    margin: 2rem;
    margin-top: 1rem;
-   height: 100%;
+   height: 100vh;
    width: 95%;
    grid-template-columns: 10% 80% 10%;
    font-family: 'Poppins', sans-serif;
